# App_AI_powered_waste_sorting

./: .coverage  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  __main__.py  demo_main.py
app/agent/: __init__.py  __main__.py  ai_chat_service.py  api.py  auth.py  auth_crypto.py  auth_password_policy.py  auth_rate_limit.py  auth_service.py  auth_tables.py  chat_knowledge_service.py  operations_store.py  runtime.py  schema_readiness.py  schemas.py  user_dashboard.py  user_experience_cards.py  user_report_export.py  user_screen_experience.py
app/core/: README.md  balanced_trainset.py  camera.py  capture_session.py  common_waste_catalog.py  config.py  dataset_catalog.py  dataset_metadata_migrations.py  dataset_queue.py  dataset_review.py  dataset_review_utils.py  dataset_trust.py  dispatch_guard.py  downloaded_zip_intake.py  events.py  frame_transform.py  hard_negative_dataset.py  hardware_profile.py  history.py  image_embedding.py  inference.py  inference_worker.py  kaggle_intake.py  kaggle_real_image_pipeline.py  learn_now.py  learn_now_training.py  licensed_manifest_sources.py  licensed_source_ingestion.py  manual_reference_recognition.py  multi_object_dispatch.py  phase18_anchor_tools.py  pipeline.py  recognition_test.py  recognition_test_capture.py  source_quality_report.py  speaker.py  uart.py  (+13 more)
audit/: .gitignore  .gitkeep
docs/: core-readiness-handoff.md  data-quality-baseline.md  data_candidate_ledger.md  data_source_manifest.md  hardware_integration_checklist.md  huong-dan-chay-web-app.md  model_evaluation_v5.md  model_evaluation_v6_pen_hardware.md  model_promotion_checklist.md  operations-map-local-first.md  yolo_recognition_failure_triage.md
models/: README.md
reports/: audit-findings-260611.md  discovered-bugs-260611.md
scripts/: audit_camera_anchor_readiness.py  audit_dataset.py  audit_downloaded_zip_pack.py  audit_phase9_readiness.py  audit_weak_class_eval.py  audit_weak_recovery_targets.py  audit_web_review_quality.py  augment_camera_blur_pack.py  auto_bbox_kaggle_classification.py  backdate_commits.py  backfill_legacy_camera_reviews.py  build_demo_exe.py  build_exe.py  build_kaggle_classification_manifest.py  build_kaggle_three_bin_reference.py  build_p0_licensed_manifest.py  build_phase18_wikimedia_manifest.py  build_vietnam50_licensed_manifest.py  clean_workspace.ps1  evaluate_yolo.py  export_camera_anchor_recovery_trainset.py  export_fast_trainset.py  export_kaggle_real_image_trainset.py  export_kaggle_three_bin_classifier_dataset.py  export_safety_eval_pack.py  export_vietnam_common_strong_trainset.py  export_weak_recovery_trainset.py  export_weak_recovery_v2_trainset.py  export_yolo_trainset.py  hardware_acceptance_report.py  import_camera_anchor_zip_pending.py  import_kaggle_vietnam_dataset.py  import_licensed_image_manifest.py  import_roboflow_dataset.py  inspect_model.py  make_shortcuts.py  manage_auth_accounts.py  normalize_dataset_class_ids.py  preflight_runtime.py  quick_review_p0_pending.py  (+25 more)
tests/: conftest.py
web/: .env.example  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
(+304 files in other folders)
