[project]
name = "trash-sorter"
version = "2.0.0"
description = "Trash classification desktop app with YOLO + UART"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Nguyen Tien Son", email = "jasonbmt06@gmail.com" }]
dependencies = [
  "ultralytics>=8.3,<9.0",
  "opencv-python>=4.10,<5.0",
  "pyside6>=6.7,<7.0",
  "pyserial>=3.5,<4.0",
  "pydantic>=2.8,<3.0",
  "pyqtgraph>=0.13,<0.14",
  "qtawesome>=1.3,<2.0",
  "sqlalchemy>=2.0,<3.0",
  "loguru>=0.7,<1.0",
  "numpy>=1.26,<3.0",
  "pillow>=10.0,<12.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-qt>=4.4",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.8",
  "pyinstaller>=6.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["app/core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
addopts = "-ra --strict-markers --cov=app/core --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
branch = true
